<resources>
    <string name="app_name">BibliotecaBL</string>
    <string name="AppTitle">BibliotecaBL</string>
    <string name="pwdHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="loginButtonText">Accedi</string>
    <string name="forgotPwd">Password dimenticata</string>
    <string name="newAccountText">Crea un nuovo account</string>
    <string name="signupName">Nome</string>
    <string name="signupSurname">Cognome</string>
    <string name="pwdRepeat">Ripeti password</string>
    <string name="registerText">Registrati</string>
    <string name="accAlreadyCreated">Sei già registrato?</string>
    <string name="invalidEmail">Email non valida</string>
    <string name="invalidPwd">Password non valida</string>
    <string name="invalidName">Nome non valido</string>
    <string name="invalidSurname">Cognome non valido</string>
    <string name="pwdNotMatch">Le password non coincidono</string>
    <string name="forgottenPassword">Password dimenticata?</string>
    <string name="forgottenPasswordDescription">Inserisci l\'email e ti invieremo una password temporanea!</string>
    <string name="backToLogin">Torna al login</string>
    <string name="submit">Invia</string>
    <string name="authenticationFailed">Email o password non valida</string>
    <string name="accountAlreadyExists">Registrazione fallita. Esiste già un\'account registrato con la seguente email</string>
    <string name="logout">Logout</string>



    <string name="nav_header_title">Benvenuto</string>
    <string name="nav_header_subtitle">email@email.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_rentals">Prenotazioni</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="menu_settings_title">Modifica le impostazioni del tuo account</string>
    <string name="menu_settings_confirm">Conferma</string>

    <string name="new_password">Nuova password</string>
    <string name="repeat_new_password">Ripeti nuova password</string>
    <string name="old_password">Vecchia password</string>

    <string name="menu_books">Sfoglia Libri</string>
    <string name="menu_add_books">Aggiungi Libro</string>
    <string name="menu_manage_admins">Modifica Admin</string>
    <string name="addAdmin">Inserisci l\'email dell\'account che vuoi far diventare admin</string>
    <string name="removeAdmin">Inserisci l\'email dell\'account che vuoi togliere il ruolo di admin</string>
    <string name="removeError">Non puoi togliere il ruolo di admin a te stesso!</string>

    <string name="bookCover">Copertina</string>
    <string name="bookTitle">Titolo</string>
    <string name="bookAuthor">Autore</string>
    <string name="bookDescription">Descrizione</string>
    <string name="addBook">Aggiungi</string>
    <string name="rentBook">Prenota</string>
    <string name="returnBook">Restituisci libro</string>
    <string name="bookCopies">Copie</string>
    <string name="titleEmpty">Inserire un titolo</string>
    <string name="authorEmpty">Inserire un autore</string>
    <string name="copiesEmpty">Inserire il numero di copie</string>

    <string name="informationUpdated">Informazioni aggiornate correttamente</string>
    <string name="bookAdded">Libro aggiunto correttamente</string>
    <string name="bookUpdated">Libro aggiornato correttamente</string>
    <string name="adminAdded">Admin aggiunto correttamente</string>
    <string name="adminRemoved">Admin rimosso correttamente</string>
    <string name="emailDoesntExists">Non esiste nessun account associato a quest indirizzo email</string>

    <string name="removeBook">Inserisci il titolo e l\'autore del libro che vuoi rimuovere</string>
    <string name="menu_remove_books">Rimuovi Libro</string>
    <string name="bookRemoved">Libro rimosso correttamente</string>
    <string name="bookNotFound">Non esistono libri con questo titolo e autore</string>
    <string name="rentedBook">Non puoi rimuovere libri che sono stati prenotati!</string>

    <string name="bookRented">Libro prenotato correttamente</string>
    <string name="bookAlreadyRented">Hai già prenotato questo libro!</string>

    <string name="bookReturned">Libro restituito correttamente</string>
    <string name="bookNotOwned">Non possiedi questo libro!</string>
    <string name="active_rents">Prenotazioni attive:</string>
    <string name="total_rents">Prenotazioni totali:</string>
    <string name="home_news">Ultime Novità</string>
    <string name="home_rents">Ultime Prenotazioni</string>
    <string name="default_copies">Copie:</string>
    <string name="default_author">author</string>
    <string name="default_bookName">BookName</string>

    <string name="book_removed_error">Il libro selezionato è stato rimosso</string>



</resources>