<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bibliotecabl.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rentals"
        android:name="com.example.bibliotecabl.ui.RentalsFragment"
        android:label="@string/menu_rentals"
        tools:layout="@layout/fragment_rentals" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bibliotecabl.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_browse_books"
        android:name="com.example.bibliotecabl.ui.BrowseBooksFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_browse_books" />
    <fragment
        android:id="@+id/nav_add_books"
        android:name="com.example.bibliotecabl.ui.addbooks.AddBooksFragment"
        android:label="@string/menu_add_books"
        tools:layout="@layout/fragment_add_books" />
    <fragment
        android:id="@+id/nav_manage_admins"
        android:name="com.example.bibliotecabl.ui.ManageAdminsFragment"
        android:label="@string/menu_manage_admins"
        tools:layout="@layout/fragment_manage_admins" />
</navigation>