<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.RemoveBooksFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/teko_medium"
        android:gravity="center"
        android:text="@string/removeBook"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/removeBookTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:layout_marginBottom="10dp"
        android:hint="@string/titleEmpty"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/removeBookAuthorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:layout_marginBottom="45dp"
        android:hint="@string/authorEmpty"
        android:inputType="textPersonName" />
    <Button
        android:id="@+id/confirmRemoveBookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_settings_confirm"
        app:backgroundTint="@color/blueLink" />

</LinearLayout>