<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.ManageAdminsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/teko_medium"
        android:gravity="center"
        android:text="@string/addAdmin"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/addAdminEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:layout_marginBottom="10dp"
        android:hint="@string/emailHint"
        android:inputType="textPersonName" />
    <Button
        android:id="@+id/confirmAddAdminButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/menu_settings_confirm"
        app:backgroundTint="@color/blueLink" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/teko_medium"
        android:gravity="center"
        android:text="@string/removeAdmin"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/removeAdminEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:layout_marginBottom="10dp"
        android:hint="@string/emailHint"
        android:inputType="textPersonName" />
    <Button
        android:id="@+id/confirmRemoveAdminButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_settings_confirm"
        app:backgroundTint="@color/blueLink" />

</LinearLayout>